--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ h1 {
 }
 
 #LEmovie {
-    width: 50%;
+    margin: 0;
+    width: 500px;
+    height: 900px;
     background-color: aquamarine;
 }
 
